manifests/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: mini
spec:
  replicas: 2
  selector:
    matchLabels: { app: web }
  template:
    metadata:
      labels: { app: web }
    spec:
      containers:
        - name: web
          image: rishikeshreddyv/mini-web:18b7ce7
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
      volumes:
        - name: html
          configMap:
            name: web-config
